<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Default strings -->
    <string name="actions_settings">Settings</string>
    <string name="followers_text">Followers: </string>
    <string name="other_profile_recent_ideas_text">Recent Ideas:</string>
    <string name="idea_search_info_text">Separate tags with # or # and space</string>
    <string name="people_search_ino_text">Separate items with , or , and space</string>

    <!-- Title Text Strings -->
    <string name="app_name">AGORA</string>
    <string name="register_screen_title_text">Register</string>
    <string name="login_screen_title_text">Login</string>
    <string name="profile_settings_title_text">Profile Settings</string>
    <string name="messages_title_text">Recent Messages</string>
    <string name="conversation_title_text">Conversation</string>
    <string name="post_idea_title_text">Post Idea</string>
    <string name="find_fragment_title_text">What are you looking for?</string>
    <string name="search_people_fragment_title_text">Search for People</string>
    <string name="search_ideas_fragment_title_text">Search for Ideas</string>
    <string name="recent_events_text">Recent Ideas</string>
    <string name="title_activity_found_ideas">FoundIdeasActivity</string>
    <string name="search_results_text">Search Results</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="information_title_text">Information</string>
    <string name="title_activity_idea_detail">IdeaDetailActivity</string>

    <!-- Button Text Strings -->
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="preview_button_text">Preview</string>
    <string name="complete_button_text">Complete</string>
    <string name="post_button_text">Post</string>
    <string name="find_button_text">Find</string>
    <string name="messages_button_text">Messages</string>
    <string name="settings_button_text">Settings</string>
    <string name="update_settings_button_text">Update</string>
    <string name="send_button_text">Send</string>
    <string name="find_people_button_text">People</string>
    <string name="find_ideas_button_text">Ideas</string>
    <string name="follow_button_text">Follow</string>
    <string name="information_button_text">Information</string>
    <string name="profile_send_message_button_text">Message</string>
    <string name="search_button_text">Search</string>
    <string name="un_follow_button_text">Unfollow</string>
    <string name="change_button_text">Change</string>
    <string name="approval_symbol">+</string>
    <string name="un_approval_symbol">-</string>
    <string name="take_picture_button_text">Take Picture</string>
    <string name="set_coordinates_button_text">Set Location</string>
    <string name="comment_button_text">Comment</string>

    <!-- Button Description Strings -->
    <string name="user_avatar_image_description">Profile Image</string>
    <string name="other_user_avatar_image_description">Visit Profile</string>
    <string name="take_photo_button_description">Take photo</string>

    <!-- Image Description Strings -->
    <string name="other_profile_avatar_image_description">Avatar Image</string>

    <!-- Input Field Strings -->
    <string name="user_name_input_text">User name:</string>
    <string name="password_input_text">Password:</string>
    <string name="confirm_password_input_text">Again:</string>
    <string name="email_input_text">E-mail:</string>
    <string name="identifier_input_text">E-mail or Username:</string>
    <string name="country_input_text">Country:</string>
    <string name="city_input_text">City:</string>
    <string name="message_recipient_text">To:</string>
    <string name="write_idea">Write your idea:</string>
    <string name="choose_categories">Choose categories:</string>
    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_find">FindActivity</string>
    <string name="title_activity_found">FoundActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_messages_fragment">MessagesFragment</string>
    <string name="title_activity_other_profile">OtherProfileActivity</string>
    <string name="title_activity_post_idea">PostIdeaActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_profile_settings">ProfileSettingsActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_register_fragment">RegisterFragment</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search_ideas">SearchIdeasActivity</string>
    <string name="following_text">Following:</string>
    <string name="approving_text">Approving:</string>
    <string name="home_coordinates_text">Current home location:</string>
    <string name="home_location_text">Home Location: </string>

    <!-- Idea List Item Strings -->
    <string name="idea_id_text">Idea ID:</string>
    <string name="approval_num_text">Approval:</string>
    <string name="tags_text">#-Tags</string>

    <!-- Message List Item Strings -->
    <string name="sender_text">From:</string>
    <string name="receiver_text">To:</string>


    <!-- ++++++++++++ -->
    <!-- Strings for v2 -->
    <!-- ++++++++++++ -->

    <!-- Labels -->
    <string name="daily_top_ideas_label_text">Today\'s Top Ideas</string>
    <string name="search_for_tag_label_text">Search for tag:</string>
    <string name="search_for_content_label">Search for content:</string>
    <string name="search_for_poster_label">Search for poster:</string>
    <string name="username_association_label_text">Enter a username address to associate it with this device:</string>

    <!-- Titles -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="fragment_home_title_text">AGORA</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Action Bar Strings -->
    <string name="action_bar_search_title">Search</string>
    <string name="action_bar_settings_title">Settings</string>

    <!-- Button Text Strings -->
    <string name="username_association_button_text">Commit</string>

    <!-- Tag Search Spinner Options -->
    <string-array name="tags_array">
        <item>Programming</item>
        <item>Computer Science</item>
        <item>Chemistry</item>
        <item>Physics</item>
        <item>Cooking</item>
        <item>Economics</item>
    </string-array>

</resources>
