<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/idea_avatar_image"
        android:layout_width="@dimen/avatar_image_side"
        android:layout_height="@dimen/avatar_image_side"
        android:padding="@dimen/small_padding"
        android:src="@drawable/q_mark"
        android:contentDescription="@string/user_avatar_image_description" />

    <TextView
        android:id="@+id/poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:layout_toRightOf="@id/idea_avatar_image"
        android:textSize="@dimen/large_text_size"
        android:textColor="#0099CC"/>

    <TextView
        android:id="@+id/idea_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_internal_margin"
        android:layout_toRightOf="@id/idea_avatar_image"
        android:layout_below="@id/poster"/>

    <TextView
        android:id="@+id/tags_text"
        android:text="@string/tags_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_internal_margin"
        android:padding="@dimen/small_padding"
        android:layout_toRightOf="@id/idea_avatar_image"
        android:layout_below="@id/idea_text"
        android:textColor="@color/primary_color"/>

    <TextView
        android:id="@+id/tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_internal_margin"
        android:layout_toRightOf="@id/idea_avatar_image"
        android:layout_below="@id/tags_text"/>

    <!-- Approval and Un-Approval buttons -->
    <Button
        android:id="@+id/approval_button"
        android:text="@string/approval_symbol"
        android:layout_width="@dimen/approval_button_side"
        android:layout_height="@dimen/approval_button_side"
        android:layout_below="@id/tags"
        android:layout_toRightOf="@id/idea_avatar_image"
        android:focusable="false"
        android:textColor="@color/success_color"/>

    <Button
        android:id="@+id/un_approval_button"
        android:text="@string/un_approval_symbol"
        android:layout_width="@dimen/approval_button_side"
        android:layout_height="@dimen/approval_button_side"
        android:layout_below="@id/tags"
        android:layout_toRightOf="@id/idea_avatar_image"
        android:focusable="false"
        android:textColor="@color/error_color"/>

    <Space
        android:id="@+id/approval_button_replacement"
        android:layout_width="@dimen/approval_button_side"
        android:layout_height="@dimen/approval_button_side"
        android:layout_below="@id/tags"
        android:layout_toRightOf="@id/idea_avatar_image"/>

    <TextView
        android:id="@+id/approval_num_text"
        android:text="@string/approval_num_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/small_padding"
        android:layout_marginTop="@dimen/small_internal_margin"
        android:layout_toRightOf="@id/approval_button_replacement"
        android:layout_below="@id/tags"/>

    <TextView
        android:id="@+id/approval_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/approval_num_text"
        android:layout_marginTop="@dimen/small_internal_margin"
        android:layout_below="@id/tags"
        android:textColor="#0099CC"/>

    <TextView
        android:id="@+id/idea_id_text"
        android:text="@string/idea_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_internal_margin"
        android:layout_marginLeft="@dimen/large_internal_margin"
        android:layout_toRightOf="@id/approval_num"
        android:layout_below="@id/tags"/>

    <TextView
        android:id="@+id/idea_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_internal_margin"
        android:layout_toRightOf="@id/idea_id_text"
        android:layout_below="@id/tags"
        android:textColor="#0099CC"/>
    
</RelativeLayout>