<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="se.liu.ida.josfa969.tddd80.fragments.SearchIdeasFragment">

    <TextView
        android:id="@+id/search_ideas_title"
        android:text="@string/search_ideas_fragment_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/small_title_text_size"/>

    <TextView
        android:id="@+id/idea_search_info"
        android:text="@string/idea_search_info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_ideas_title"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/search_tags_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_internal_margin"
        android:layout_below="@id/idea_search_info"
        android:inputType="textMultiLine"/>

    <Button
        android:id="@+id/idea_search_button"
        android:text="@string/search_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_tags_input"
        android:layout_marginTop="@dimen/small_internal_margin"
        android:layout_centerHorizontal="true"
        android:onClick="onIdeaSearchClick"/>

    <TextView
        android:id="@+id/search_ideas_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/large_text_size"
        android:textColor="@color/error_color"/>

</RelativeLayout>
