<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="se.liu.ida.josfa969.tddd80.fragments.ProfileSettingsFragment">

    <TextView
        android:id="@+id/profile_settings_title"
        android:text="@string/profile_settings_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/small_title_text_size"/>

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/avatar_image_side"
        android:layout_height="@dimen/avatar_image_side"
        android:layout_marginTop="@dimen/large_internal_margin"
        android:layout_below="@id/profile_settings_title"
        android:src="@drawable/q_mark"
        android:contentDescription="@string/user_avatar_image_description" />

    <TextView
        android:id="@+id/profile_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_internal_margin"
        android:layout_marginLeft="@dimen/small_internal_margin"
        android:layout_toRightOf="@id/profile_image"
        android:layout_below="@id/profile_settings_title"
        android:textSize="@dimen/large_text_size"
        android:textColor="@color/primary_color"/>

    <TextView
        android:id="@+id/profile_e_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_internal_margin"
        android:layout_toRightOf="@id/profile_image"
        android:layout_below="@id/profile_user_name"/>

    <Button
        android:id="@+id/update_settings_button"
        android:text="@string/update_settings_button_text"
        android:layout_width="@dimen/large_button_width"
        android:layout_height="@dimen/large_button_height"
        android:layout_marginTop="@dimen/small_internal_margin"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:onClick="onUpdateClick"/>

</RelativeLayout>