<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="se.liu.ida.josfa969.tddd80.fragments.IdeaDetailFragment">

    <TextView
        android:id="@+id/idea_detail_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:textSize="@dimen/large_text_size"
        android:textColor="#0099CC"/>

    <TextView
        android:id="@+id/idea_detail_idea_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_internal_margin"
        android:layout_marginStart="@dimen/large_internal_margin"
        android:layout_below="@id/idea_detail_poster"/>

    <TextView
        android:id="@+id/idea_detail_tags_text"
        android:text="@string/tags_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_internal_margin"
        android:paddingLeft="@dimen/small_padding"
        android:paddingRight="@dimen/small_padding"
        android:layout_below="@id/idea_detail_idea_text"
        android:textColor="@color/primary_color"/>

    <TextView
        android:id="@+id/idea_detail_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_internal_margin"
        android:layout_marginStart="@dimen/large_internal_margin"
        android:layout_below="@id/idea_detail_tags_text"/>

    <!-- Approval and Un-Approval buttons -->
    <Button
        android:id="@+id/idea_detail_approval_button"
        android:text="@string/approval_symbol"
        android:layout_width="@dimen/approval_button_side"
        android:layout_height="@dimen/approval_button_side"
        android:layout_below="@id/idea_detail_tags"
        android:focusable="false"
        android:textColor="@color/success_color"
        android:onClick="onIdeaDetailApprovalClick"/>

    <Button
        android:id="@+id/idea_detail_un_approval_button"
        android:text="@string/un_approval_symbol"
        android:layout_width="@dimen/approval_button_side"
        android:layout_height="@dimen/approval_button_side"
        android:layout_below="@id/idea_detail_tags"
        android:focusable="false"
        android:textColor="@color/error_color"
        android:onClick="onIdeaDetailUnApprovalClick"/>

    <Space
        android:id="@+id/idea_detail_approval_button_replacement"
        android:layout_width="@dimen/approval_button_side"
        android:layout_height="@dimen/approval_button_side"
        android:layout_below="@id/idea_detail_tags"/>

    <TextView
        android:id="@+id/idea_detail_approval_num_text"
        android:text="@string/approval_num_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/small_padding"
        android:paddingRight="@dimen/small_padding"
        android:layout_marginTop="@dimen/small_internal_margin"
        android:layout_toRightOf="@id/idea_detail_approval_button_replacement"
        android:layout_toEndOf="@id/idea_detail_approval_button_replacement"
        android:layout_below="@id/idea_detail_tags"/>

    <TextView
        android:id="@+id/idea_detail_approval_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/idea_detail_approval_num_text"
        android:layout_toEndOf="@id/idea_detail_approval_num_text"
        android:layout_marginTop="@dimen/small_internal_margin"
        android:layout_below="@id/idea_detail_tags"
        android:textColor="#0099CC"/>

    <TextView
        android:id="@+id/idea_detail_id_text"
        android:text="@string/idea_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_internal_margin"
        android:layout_marginLeft="@dimen/large_internal_margin"
        android:layout_marginStart="@dimen/large_internal_margin"
        android:layout_toRightOf="@id/idea_detail_approval_num"
        android:layout_toEndOf="@id/idea_detail_approval_num"
        android:layout_below="@id/idea_detail_tags"/>

    <TextView
        android:id="@+id/idea_detail_idea_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_internal_margin"
        android:layout_toRightOf="@id/idea_detail_id_text"
        android:layout_toEndOf="@id/idea_detail_id_text"
        android:layout_below="@id/idea_detail_tags"
        android:textColor="#0099CC"/>

    <Button
        android:id="@+id/post_comment_button"
        android:text="@string/comment_button_text"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/small_button_height"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:onClick="onCommentClick"/>

    <EditText
        android:id="@+id/comment_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/post_comment_button"
        android:background="@color/background_holo_light"
        android:inputType="textMultiLine"/>

    <ListView
        android:id="@+id/comment_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_internal_margin"
        android:layout_above="@id/comment_input"
        android:layout_below="@id/idea_detail_approval_button_replacement" />

</RelativeLayout>
