<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="se.liu.ida.josfa969.tddd80.fragments.InformationFragment">

        <TextView
            android:id="@+id/information_title"
            android:text="@string/information_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_title_text_size"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/other_user_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_internal_margin"
            android:layout_below="@id/information_title"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/other_user_e_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_internal_margin"
            android:layout_below="@id/other_user_user_name"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/other_user_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_internal_margin"
            android:layout_below="@id/other_user_e_mail"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/other_user_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_internal_margin"
            android:layout_below="@id/other_user_country"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/other_user_followers"
            android:text="@string/followers_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_internal_margin"
            android:layout_below="@id/other_user_city"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/information_other_user_follower_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_internal_margin"
            android:layout_toRightOf="@id/other_user_followers"
            android:layout_below="@id/other_user_city"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/other_user_home_location_text"
            android:text="@string/home_location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_internal_margin"
            android:layout_below="@id/other_user_followers"
            android:textSize="@dimen/large_text_size"/>

        <TextView
            android:id="@+id/other_user_home_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_internal_margin"
            android:layout_below="@id/other_user_followers"
            android:layout_toRightOf="@id/other_user_home_location_text"
            android:textSize="@dimen/large_text_size"/>

        <TextView
            android:id="@+id/other_user_following_title"
            android:text="@string/following_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_internal_margin"
            android:layout_below="@id/other_user_home_location_text"
            android:textSize="@dimen/large_text_size" />

        <!-- Using Linear Layouts instead of ListViews in order
        to make the whole fragment scrollable -->
        <LinearLayout
            android:id="@+id/other_user_following_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/large_internal_margin"
            android:layout_marginTop="@dimen/small_internal_margin"
            android:layout_below="@id/other_user_following_title" />

        <TextView
            android:id="@+id/other_user_approving_title"
            android:text="@string/approving_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_internal_margin"
            android:layout_below="@id/other_user_following_list"
            android:textSize="@dimen/large_text_size" />

        <!-- Using Linear Layouts instead of ListViews in order
        to make the whole fragment scrollable -->
        <LinearLayout
            android:id="@+id/other_user_approving_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/large_internal_margin"
            android:layout_marginTop="@dimen/small_internal_margin"
            android:layout_below="@id/other_user_approving_title" />

    </RelativeLayout>

</ScrollView>